# endstone-worldgen-api

./: .gitattributes  .gitignore  APPLY_CI_FIX.md  BUILD_STATUS.md  CHANGELOG.md  CI_WORKFLOW_COPY.yml  CMakeLists.txt  LICENSE  README.md  SOURCE_RELEASE.json  UPDATE_FROM_0.4.0-alpha.4.md  VALIDATION_RESULTS.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
compatibility/: versions.json
docs/: ARCHITECTURE.md  BDS_26_30_ADAPTER.md  CI_TROUBLESHOOTING.md  EXACT_BUILD_DEPENDENCIES.md  GITHUB_RELEASES.md  INSTALL.md  VANILLA_ACCELERATION.md
examples/cpp/: parallel_ore_populator.cpp
examples/python/: flat_generator.py  in_game_test_plugin.py
examples/python/world_gen_studio_plugin/: README.md  plugin.py  pyproject.toml
examples/python/world_gen_studio_plugin/src/endstone_worldgen_studio/: __init__.py  plugin.py
include/: version.h.in
include/endstone_worldgen/: bds_26_30_adapter.h  chunk_buffer.h  generation_interceptor.h  generation_scheduler.h  generator.h  native_adapter.h  neighborhood_locks.h  thread_pool.h  types.h  worldgen_service.h
python/endstone_worldgen/: __init__.py  core.py
scripts/: build_exact.ps1  build_exact.py  build_exact.sh  package_release.py  verify_release_assets.py
src/: bds_26_30_adapter.cpp  chunk_buffer.cpp  generation_interceptor.cpp  generation_scheduler.cpp  generators.cpp  neighborhood_locks.cpp  plugin.cpp  python_bindings.cpp  thread_pool.cpp  version_gate.cpp
tests/cpp/: test_worldgen.cpp
tests/python/: test_worldgen.py
