[build-system]
requires=["setuptools>=69"]
build-backend="setuptools.build_meta"
[project]
name="endstone-worldgen-api"
version="0.4.1"
description="Detached parallel world generation API for Endstone"
requires-python=">=3.10"
license={text="Apache-2.0"}
[tool.setuptools]
package-dir={""="python"}
[tool.setuptools.packages.find]
where=["python"]
