[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-worldgen-studio"
version = "0.4.5a9"
description = "In-game worldgen, chunk interceptor, and scheduler stress test plugin for Endstone"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "endstone>=0.11.0",
]

[project.entry-points."endstone.plugins"]
worldgen_studio = "endstone_worldgen_studio:WorldGenStudioPlugin"

[tool.setuptools.packages.find]
where = ["src"]
